--- a/frontend/vite_app/package.json
+++ b/frontend/vite_app/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.66.11",
     "lucide-react": "^0.475.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.2.0"
+    "react-hot-toast": "^2.5.2",
+    "react-router-dom": "^7.2.0",
+    "sonner": "^2.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
