--- a/frontend/vite_app/package.json
+++ b/frontend/vite_app/package.json
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "postinstall": "chmod +x node_modules/.bin/vite"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@radix-ui/react-tooltip": "^1.2.7",
@@ -31,5 +30,8 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "vite": "^7.0.6"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
