--- a/frontend/vite_app/package.json
+++ b/frontend/vite_app/package.json
@@ -7,8 +7,7 @@
     "build": "vite build",
     "dev": "vite",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "vercel-build": "chmod +x node_modules/.bin/vite && vite build || vite build"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@radix-ui/react-tooltip": "^1.2.7",
@@ -25,7 +24,6 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.7.0",
-    "cross-env": "^10.0.0",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
